--- a/docs/devices/9290030674.md
+++ b/docs/devices/9290030674.md
@@ -37,7 +37,7 @@ This specific device has been reported to have issues repairing to a Zigbee netw
 ### Motion sensitivity
 The motion sensitivity can be changed by publishing to `zigbee2mqtt/FRIENDLY_NAME/set`
 `{"motion_sensitivity": "SENSITIVITY"}` where `SENSITIVITY` is one of the following
-values: `low`,  `medium`,  `high` (default).
+values: `low`,  `medium`,  `high` (default), `very_high`, `max`.
 
 ### Occupancy timeout
 Sets the sensors timeout between last motion detected and sensor reporting occupancy as false
